--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
 body {
+	background-color: rgb(36, 33, 36);
+	color: rgb(191, 225, 232);
 	margin: 0;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
 		"Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -19,11 +21,37 @@ code {
 }
 
 .rm {
-	background: red;
-	border-radius: 50%;
-	color: white;
+	background: rgb(241, 1, 37);
+	border-radius: 4px;
+	color: #000;
 	border: none;
 }
+
 .done {
 	text-decoration: line-through;
+}
+
+.lds-dual-ring {
+	display: inline-block;
+	width: 64px;
+	height: 64px;
+}
+.lds-dual-ring:after {
+	content: " ";
+	display: block;
+	width: 46px;
+	height: 46px;
+	margin: 1px;
+	border-radius: 50%;
+	border: 5px solid blue;
+	border-color: blue transparent blue transparent;
+	animation: lds-dual-ring 1.2s linear infinite;
+}
+@keyframes lds-dual-ring {
+	0% {
+		transform: rotate(0deg);
+	}
+	100% {
+		transform: rotate(360deg);
+	}
 }
