--- a/src/index.css
+++ b/src/index.css
@@ -43,8 +43,8 @@ code {
 	height: 46px;
 	margin: 1px;
 	border-radius: 50%;
-	border: 5px solid blue;
-	border-color: blue transparent blue transparent;
+	border: 5px solid rgb(0, 0, 0);
+	border-color: rgb(0, 0, 0) transparent rgb(0, 0, 0) transparent;
 	animation: lds-dual-ring 1.2s linear infinite;
 }
 @keyframes lds-dual-ring {
